--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                 <li class="menu__item">
                     <a class="menu__link" href="">Contacto</a>
                 </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="">Portfolio</a>
+                </li>
             </ul>
         </nav>
     </header>
