--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <!-- HEADER DE LA PAGINA -->
-    <h1>Estoy en la rama Desafío SASS</h1>
+    <h1>Agregué animaciones</h1>
     <header>
         <picture class="animate__animated animate__flipInX">
             <img src="./img/logo.svg" alt="">
