--- a/index.html
+++ b/index.html
@@ -9,15 +9,21 @@
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+    <!-- Bootstrap via download-->
+    <!-- <link rel="stylesheet" href="./css/bootstrap.css"> -->
+
+
+    <!-- Bootstrap via CDN-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+
+
     <link rel="stylesheet" href="./css/index.css">
-    <style>
-    </style>
 </head>
 <body>
     <!-- HEADER DE LA PAGINA -->
-    <h1>Agregué animaciones</h1>
     <header>
         <picture class="animate__animated animate__flipInX">
             <img src="./img/logo.svg" alt="">
@@ -42,33 +48,33 @@
     <!-- <div class="animated">
 
     </div> -->
-    <main>
-        <section id="cards" class="cards">
-            <article class="box box--moved">
+    <main class="container">
+        <section id="cards" class="cards row justify-content-center"">
+            <article class="box box--moved col-sm-6 col-lg-4 shadow rounded">
                  <picture class="box__img box__img--zorro">
                      <img src="img/zorro.jpg" alt="">
                  </picture>
-                 <div class="box__info">
+                 <div class="box__info p-5">
                      <h2 class="box__title">Zorro Rojo</h2>
                      <h3 class="box__subtitle">Vulpes Vulpes</h3>
                      <p class="box__text">El zorro común o zorro rojo, también llamado raposo o raboso, es una especie de mamífero de la familia cánidos, de distribución holártica, aunque también fue introducido en Australia en el siglo XIX.</p>
                  </div>
             </article>
-            <article class="box">
+            <article class="box col-sm-6 col-lg-4 shadow rounded">
                  <picture class="box__img box__img--perro">
                      <img src="img/perro.jpg" alt="">
                  </picture>
-                 <div class="box__info">
+                 <div class="box__info p-5">
                      <h2 class="box__title">Weimaraner</h2>
                      <h3 class="box__subtitle">El mejor amigo del hombre</h3>
                      <p class="box__text">El braco de Weimar es un perro de caza especialmente dotado como perro cobrador. Su pelaje, corto y espeso, le protege muy bien de la humedad; esto le permite ser un cazador eficaz en terrenos pantanosos.</p>
                  </div>
             </article>
-            <article class="box">
+            <article class="box col-sm-8 col-lg-4 shadow rounded">
                  <picture class="box__img">
                      <img src="img/guacamayo.jpg" alt="">
                  </picture>
-                 <div class="box__info">
+                 <div class="box__info p-5">
                      <h2 class="box__title">Guacamayo</h2>
                      <h3 class="box__subtitle">Ara</h3>
                      <p class="box__text">Los guacamayos son aves del orden Psittaciformes y de la familia Psittacidae, muy llamativas por el colorido de su plumaje. También conocidos como Mery en algunos círculos</p>
@@ -112,6 +118,9 @@
         <a href="https://github.com"><span class="iconify" data-icon="akar-icons:github-fill" style="color: #fdf7fa;"></span></a>
     </footer>
     <!-- FOOTER DE LA PAGINA -->
+
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
